--- a/css/style.css
+++ b/css/style.css
@@ -76,18 +76,22 @@
 	flex:0 0 auto;
 	padding:0 15px;
 }
+html{
+	font-size:16px;
+}
 .navbar{
 	width:100%;
 	background-color:white;
 	position:fixed;
 	z-index:3;
 	padding:12px 0;
+	box-shadow: 0px 0 18px rgba(55, 66, 59, 0.08);
 	
 }
 .mentor h1{
 
 	color:#5FCF80;
-	/* font-weight:bold; */
+	font-weight:bold;
 }
 
 .nav_menu ul{
@@ -117,7 +121,8 @@
 }
 .nav_menu{
 	display:flex;
-	justify-content:end;
+	justify-content:space-evenly;
+	align-items:center;
 }
 .nav_btn a{
 	    margin-left: 22px;
@@ -172,18 +177,7 @@
     transition: 0.5s;
     border-radius: 4px;
 }
-.nav_menu a:focus {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 0 10px 30px;
-    font-family: "Poppins", sans-serif;
-    font-size: 0.938rem;
-    font-weight: 500;
-    color: #37423b;
-    white-space: nowrap;
-    transition: 0.5s;
-}
+
 .nav_menu .dropdown:hover>ul {
     opacity: 1;
     top: 100%;
@@ -199,8 +193,11 @@
 	padding-top:140px;
 	background-attachment:fixed;
 }
+.text_align_cntr{
+	vertical-align:center;
+}
 .ban{
-	padding-top: 72px;
+	/* padding-top: 72px; */
 }
 .ban h1{
 	      margin: 0;
